[package]
name = "online_decaf"
version = "0.1.0"
authors = ["Jiajie Chen <noc@jiegec.ac.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stdweb = "0.4.19"
yew = "0.9.0"
serde = "1.0.101"
driver = { git = "https://github.com/jiegec/decaf-rs.git", branch = "pa5_wast" }
wasmi = "0.5.1"